--- a/style.css
+++ b/style.css
@@ -13,13 +13,52 @@ body {
   margin: 0;
 }
 
+.formStyle {
+  background-color: rgb(236, 226, 221);
+  width: 30%;
+  height: 50vh;
+}
+
+.hide {
+  display: none;
+}
+
+.headerStyle {
+  color: #10213b !important;
+}
+
+.optionButtonStyle {
+  background-color: #10213b !important;
+  padding: 10px 70px !important;
+  color: white !important;
+}
+
+.optionButtonStyle:hover {
+  background-color: #183867 !important;
+}
+.submitButton {
+  background-color: #10213b !important;
+  padding: 10px 30px !important;
+}
+.submitButton:hover {
+  background-color: #183867 !important;
+  padding: 10px 30px !important;
+}
+
+.optionButtonStyle2 {
+  background-color: orange !important;
+  padding: 10px 70px !important;
+  color: #183867 !important;
+  font-weight: 400 !important;
+}
+
 .boardStyle {
   background-image: url("image/tic-tac-toe_1706536926613.jpg");
   max-width: 100%;
   height: 100vh;
   background-size: cover;
   background-position: top left;
-  padding: 15px;
+  padding: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -27,12 +66,15 @@ body {
 }
 
 .board {
-  display: grid;
+  display: /*grid;*/ none;
   justify-content: center;
   align-content: center;
   justify-items: center;
   align-items: center;
   grid-template-columns: repeat(3, auto);
+}
+.show {
+  display: grid;
 }
 
 .cell {
@@ -122,7 +164,7 @@ body {
 .board.circle .cell:not(.x):not(.circle):hover::after {
   width: calc(var(--mark-size) * 0.7);
   height: calc(var(--mark-size) * 0.7);
-  background-color: /*white;*/ #052027;
+  background-color: /*white; #122b31;*/ #10213b;
 }
 
 .cell.x,
@@ -141,21 +183,23 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  color: white;
+  color: pink;
   font-size: 5rem;
+  margin: 0;
 }
 
 .winning-message button {
   font-size: 3rem;
-  background-color: white;
+  background-color: orange;
   border: 1px solid black;
-  padding: 0.25em 0.5em;
+  padding: 10px 70px; /* Combine the padding values into a single declaration */
   cursor: pointer;
+  color: #081425;
 }
 
 .winning-message button:hover {
-  background-color: black;
-  color: white;
+  background-color: #081425;
+  color: pink;
   border-color: white;
   transition: background-color 0.2s ease-in, color 0.2s ease-in,
     border-color 0.3s ease-in;
